Finished preprocessing (OpenAI calls)

--- a/environment.yml
+++ b/environment.yml
@@ -27,3 +27,7 @@ dependencies:
       - gdown
       - nlpaug
       - PyYAML
+      - torch
+      - torchvision
+      - torchaudio
+      - sentencepiece
