--- a/pipeline/config.yml
+++ b/pipeline/config.yml
@@ -15,6 +15,7 @@ domain_tagging:
   save_embeddings: true
   use_saved_embeddings: true
   n_domains: 13
+  plot: false
 
 # Configuration of data augmentation techniques 
 # n_samples: fraction (percent) of the entire DataFrame to augment per step
