Withhold 2 domains for test data

--- a/pipeline/config.yml
+++ b/pipeline/config.yml
@@ -22,9 +22,9 @@ domain_tagging:
 # augmentation_budget: Number of requests to send to openai api, avg. cost per 1000 requests: 0.18$ (GPT-4.1 Nano)
 augmentation:
   style_transfer:
-    enabled: true
+    enabled: false
   paraphrasing:
-    enabled: true
+    enabled: false
   augmentation_budget: 5000
 
 # Settings for text tokenization
@@ -34,7 +34,7 @@ tokenization:
 
 # Settings fo balanced output (lower data volume)
 balance_data: 
-  balance: true
+  balance: false
   balance_tolerance: 0.5
 
 # Dataset is split into Train/Validation and Test, this specifies the testsize in %
