--- a/pipeline/config.yml
+++ b/pipeline/config.yml
@@ -14,24 +14,29 @@ preprocessing:
 # Domain tagging settings
 domain_tagging:
   save_embeddings: false
-  use_saved_embeddings: false
+  use_saved_embeddings: true
   n_domains: 13
   plot: true
 
-# Configuration of data augmentation techniques 
-# augmentation_budget: Number of requests to send to openai api, avg. cost per 1000 requests: 0.18$ (GPT-4.1 Nano)
-# methods
-#   equalized: Augments every domain with the same number of samples
-#   demand_based: Balanced the domain with the least amount of samples first, then second-to-last and so on
 augmentation:
+  # Enable or disable specific augmentation techniques
   style_transfer:
-    enabled: true
+    enabled: false
   paraphrasing:
-    enabled: true
+    enabled: false
+
+  # Total number of augmentation requests to send to the OpenAI API per augmentation technique
+  # Note: Average cost per 1000 requests is ~$0.18 (based on GPT-4.1 Nano pricing)
   augmentation_budget: 5000
+
+  # Strategy for distributing augmentation across domains
   methods:
+    # Augments every domain with an equal number of samples
     equalized: true
+
+    # Prioritizes balancing domains with the fewest samples first
     demand_based: false
+
 
 
 # Settings for text tokenization
@@ -39,22 +44,32 @@ tokenization:
   tokenizer_model: "sentence-transformers/all-MiniLM-L6-v2"
   sequence_max_length: 256
 
-# Settings fo balanced output (lower data volume)
-balance_data: 
+
+balance_data:
+  # Whether to enable data balancing (reduces overall data volume)
   balance: false
+
+  # Tolerance level for class imbalance when balancing is enabled
+  # For example, 0.5 allows up to 50% deviation from perfect balance
   balance_tolerance: 0.5
 
-# Dataset is split into Train/Validation and Test, this specifies the testsize in %
 
-# If test_cross_domains is enabled, the test dataset will only consist of domains not present in the train/val dataset
-#   random_domains specifies if the held-out domains in the test set are chosen at random (default: n domains with least amount of samples)
-#   n_domains is the number of held-out domains
-# test_size specifies the size of the test dataset, only works if random_domains is disabled
 test_set:
+  # Whether to use a cross-domain testing setup
   test_cross_domains: false
-  random_domains: true
+
+  # If cross-domain testing is enabled:
+  #   - If true, select held-out domains randomly
+  #   - If false, use the n domains (n_domains) with the fewest samples
+  random_domains: false
+
+  # Number of domains to hold out for testing (used only if test_cross_domains is true and random_domains is false)
   n_domains: 1
+
+  # Proportion of the dataset to use as test set
+  # Only applicable if test_cross_domains is false
   test_size: 0.1
+
 
 # Directory for saving processed data
 output: "output" 
